# AU-bachelor-project

./: .gitignore  README.md  pyproject.toml
au_bachelor_project/: dp.py  kp_dp.py  main.py
au_bachelor_project/utils/: functions.py
tests/utils/: test_functions.py
