[tool.poetry]
name = "au-bachelor-project"
version = "0.1.0"
description = ""
authors = ["Valdemar Emil Otte Petersen <36330221+ValdemarOtte@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "au_bachelor_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
black = "^24.8.0"
ruff = "^0.6.7"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
